fixdd default user profile not showing,remove adding user info on firebase user  obj

--- a/static/sass/base/_utilities.scss
+++ b/static/sass/base/_utilities.scss
@@ -5,3 +5,18 @@
 .u-margin-bottom-small {
   margin-bottom: 1rem !important;
 }
+
+.sm-svg {
+  width: 2rem;
+  height: 2rem;
+}
+
+.md-svg {
+  width: 3rem;
+  height: 3rem;
+}
+
+.lg-svg {
+  width: 4rem;
+  height: 4rem;
+}
